chore: updated unit tests